<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="txlabz.com.geoconfess.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                style="@style/AppTheme.Widget.EditText.Helvetica"
                android:layout_marginTop="@dimen/material_40_dp"
                android:background="@drawable/editext_selector"
                android:drawableLeft="@drawable/icon_identification_off"
                android:drawablePadding="@dimen/material_24_dp"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/password"
                style="@style/AppTheme.Widget.EditText.Helvetica"
                android:layout_below="@id/username"
                android:layout_marginTop="@dimen/material_4_dp"
                android:background="@drawable/editext_selector"
                android:drawableLeft="@drawable/icon_password_off"
                android:drawablePadding="@dimen/material_24_dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton"

                style="@style/AppTheme.Widget.Button.adventpro"
                android:layout_below="@id/password"
                android:layout_marginTop="@dimen/material_32_dp"
                android:text="@string/login_button_text"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/forgotPasswordlabel"
                style="@style/AppTheme.Widget.TextView.Helvetica"
                android:layout_below="@id/loginButton"
                android:layout_marginTop="@dimen/material_16_dp"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/signUplabel"
                style="@style/AppTheme.Widget.TextView.Helvetica"
                android:layout_below="@id/forgotPasswordlabel"
                android:layout_marginTop="@dimen/material_24_dp"
                android:text="@string/signup"
                android:paddingBottom="5dp"
                android:textColor="@color/text_dark_red"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>