<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/actionbar_size"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/material_64_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_24_dp"
            android:src="@drawable/ic_logo_big" />

        <TextView
            android:id="@+id/txt_demand_confession"
            style="@style/AppTheme.Widget.TextView"
            android:text="@string/demand_confession"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_priest_name"
            style="@style/AppTheme.Widget.TextView"
            android:layout_marginTop="@dimen/material_4_dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_xxlarge"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/btn_available"
            style="@style/AppTheme.Widget.Button.adventpro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_40_dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/material_8_dp">

            <TextView
                style="@style/AppTheme.Widget.Button.adventpro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_8_dp"
                android:layout_marginRight="@dimen/material_0_dp"
                android:clickable="false"
                android:text="@string/i_m_available"
                android:textAllCaps="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_not_available"
            style="@style/AppTheme.Widget.Button.adventpro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_16_dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/material_8_dp">

            <TextView
                style="@style/AppTheme.Widget.Button.adventpro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_8_dp"
                android:layout_marginRight="@dimen/material_0_dp"
                android:clickable="false"
                android:text="@string/i_m_not_available"
                android:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>