<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/actionbar_size"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/app_font_10sp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confessure"
            android:textAllCaps="true"
            android:textColor="@color/colorGreyText"
            android:textSize="@dimen/font_size_medium" />

        <TextView

            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:ellipsize="end"
            android:text="JEAN"
            android:textAllCaps="true"
            android:textColor="@color/colorGreyText"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chat_bottom_bar"
        android:layout_below="@+id/headerLay"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:id="@id/chat_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@color/whitegrey"
        android:orientation="horizontal"
        android:padding="@dimen/material_8_dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/material_8_dp"
            android:paddingRight="@dimen/material_16_dp"
            android:visibility="gone"
            android:src="@android:drawable/ic_menu_camera"/>


        <EditText
            android:id="@+id/message_content_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/hint_message"
            android:inputType="textCapSentences"
            android:lines="1"
            android:padding="@dimen/material_8_dp"
            android:textColor="@color/chatColorText"
            android:textColorHint="@color/text_hint_gray"
            tools:text="test"/>

        <TextView
            android:id="@+id/send_msg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/material_8_dp"
            android:paddingRight="@dimen/material_8_dp"
            android:text="@string/chat_send"
            android:textSize="@dimen/font_size_medium" />
    </LinearLayout>
</RelativeLayout>